src/test/deca/codegen/valid/soustraction_mult_simple.deca
// Description:
//    test soustraction multiple
//
// Resultats:
//  -2
//
// Historique:
//    cree le 13/01/2017
{
int x=1;
x =  2 - x - 3;
print(x);
}
