src/test/deca/codegen/invalid/UnMoinsNoInit.deca
// Description:
//    soustraction sans initialisation
//
// Resultats:
//  Erreur
//
// Historique:
//    cree le 13/01/2017
{
int x;
print(1-x);
}
